kubernetes/uloha_rambo/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambo1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo1
  template:
    metadata:
      labels:
        app: rambo1
    spec:
      containers:
      - name: rambo1-container
        image: bletvaska/rambo:1
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rambo1
spec:
  selector:
    app: rambo1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambo2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo2
  template:
    metadata:
      labels:
        app: rambo2
    spec:
      containers:
      - name: rambo2-container
        image: bletvaska/rambo:2
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rambo2
spec:
  selector:
    app: rambo2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambo3-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo3
  template:
    metadata:
      labels:
        app: rambo3
    spec:
      containers:
      - name: rambo3-container
        image: bletvaska/rambo:3
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rambo3
spec:
  selector:
    app: rambo3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambo4-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo4
  template:
    metadata:
      labels:
        app: rambo4
    spec:
      containers:
      - name: rambo4-container
        image: bletvaska/rambo:4
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rambo4
spec:
  selector:
    app: rambo4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rambo5-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo5
  template:
    metadata:
      labels:
        app: rambo5
    spec:
      containers:
      - name: rambo5-container
        image: bletvaska/rambo:5
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: rambo5
spec:
  selector:
    app: rambo5
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rambo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /rambo1
        pathType: Prefix
        backend:
          service:
            name: rambo1
            port:
              number: 80
      - path: /rambo2
        pathType: Prefix
        backend:
          service:
            name: rambo2
            port:
              number: 80
      - path: /rambo3
        pathType: Prefix
        backend:
          service:
            name: rambo3
            port:
              number: 80
      - path: /rambo4
        pathType: Prefix
        backend:
          service:
            name: rambo4
            port:
              number: 80
      - path: /rambo5
        pathType: Prefix
        backend:
          service:
            name: rambo5
            port:
              number: 80
